--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-apply plugin: 'android-apt'
+//apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 25
@@ -32,7 +32,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.0'
 
     // Schematic dependencies for ContentProvider
-    apt 'net.simonvt.schematic:schematic-compiler:0.6.3'
+   // apt 'net.simonvt.schematic:schematic-compiler:0.6.3'
+    annotationProcessor 'net.simonvt.schematic:schematic-compiler:0.6.3'
+
     compile 'net.simonvt.schematic:schematic:0.6.3'
 
     // Preferences Dependencies
@@ -40,6 +42,7 @@ dependencies {
 
     // Firebase dependency
     compile 'com.google.firebase:firebase-messaging:10.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.1'
 }
 // Apply the Google Services plugin. Make sure to add the google-services.json file in the app
 // folder. You download it from the Firebase console
