--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,14 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
+
     }
     dependencies {
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.2'
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        //classpath 'com.neenbedankt.gradle.plugins:android-apt:1.2'
+        classpath 'com.android.tools.build:gradle:3.3.1'
+        classpath 'com.google.gms:google-services:4.2.0'
 
         // Google Services plugin
         classpath 'com.google.gms:google-services:3.0.0'
@@ -18,6 +21,7 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
     }
 }
